# blocvoting

./: FromFile.hs  LICENSE  README.md  blocvoting.cabal  packages.txt  stack.yaml  testData.txt
BlocVoting/: Binary.hs  Nulldata.hs  Tally.hs
BlocVoting/Bitcoin/: Address.hs  Base58.hs
BlocVoting/Instructions/: Cast.hs  Create.hs  Delegate.hs  Empower.hs  ModRes.hs
BlocVoting/Tally/: GrandTally.hs  NetworkSettings.hs  Resolution.hs  Tally.hs  Transfer.hs  Voter.hs
src/: BlocVoting.hs  FromFile.hs
src/BlocVoting/: Filter.hs  Instructions.hs  Tally.hs
src/BlocVoting/Bitcoin/: Address.hs  Base58.hs
src/BlocVoting/Instructions/: Cast.hs  Create.hs  Delegate.hs  Empower.hs  ModRes.hs
src/BlocVoting/Tally/: Delegate.hs  GrandTally.hs  NetworkSettings.hs  Tally.hs  Transfer.hs  Vote.hs  Voter.hs
